# robotics_navigation

./: README.md  frames_2025-05-14_18.27.10.gv  frames_2025-05-14_18.56.40.gv  frames_2025-05-14_18.56.51.gv  frames_2025-05-14_19.00.56.gv  frames_2025-05-14_19.24.21.gv  frames_2025-06-01_15.30.48.gv  frames_2025-06-01_15.31.38.gv  map.pgm  map.yaml  map_edited1.pgm  map_edited1.yaml  map_kitchen.pgm  map_kitchen.yaml  map_lab3.yaml  nav.sh  nav2_params.yaml  saved_goals.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
maps/: frames_2025-05-08_18.11.16.gv  frames_2025-05-08_18.18.23.gv  map_v1.yaml  map_v2.pgm  map_v2.yaml  map_v3.pgm  map_v3.yaml  map_v3_keepout.pgm  map_v3_keepout.yaml  map_v4.pgm  map_v4.yaml  map_v5.pgm  map_v5.yaml  map_v6.pgm  map_v6.yaml  map_v7.pgm  map_v7.yaml  map_v8.pgm  map_v8.yaml  map_v9.yaml  nav.sh  nav2_params.yaml  saved_goals.yaml
nav_ws/: face_south.py  print_qr_code.py  qr_code_detect_aruco.py  qr_code_navigator.py  qr_code_pose_estimator.py  (+1 more)
nav_ws/c8nav/: CMakeLists.txt  package.xml  setup.cfg  setup.py
nav_ws/c8nav/c8nav/: get_goal.py  get_goal_copy.py  pose_estimate.py  qr_code_direct_navigator.py  send_goal.py
nav_ws/c8nav/msg/: Nav2Status.msg
nav_ws/c8nav/src/c8nav/: get_goal.py  get_goal_test.py  nav2_status_publisher.py  pose_estimate.py  qr_code_aruco_create.py  qr_code_detect_test.py  qr_code_direct_navigator.py  qr_code_recognition.py  qr_code_recognition_create.py  save_current_pose.py  send_goal.py  test_location_subscriber.py
nav_ws/c8nav/test/: test_cv2.py
(+756 files in other folders)
